# rag-pipeline-european-energy-markets

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: sources.json
src/rag_pipeline/: __init__.py  chunking.py  cli.py  config.py  documents.py  embeddings.py  generation.py  grounding.py  pipeline.py  store.py  validation.py
tests/: test_chunking.py  test_documents.py  test_grounding.py
